# bramble

./: .gitignore  .gitmodules  GIT_HISTORY_CLEANUP_INSTRUCTIONS.md  LICENSE  Makefile  README.md  bam.cpp  bam.h  bramble.cpp  bramble.h  build.sh  bump_and_publish.sh  meson.build  meson_options.txt  reads.cpp  reads.h  setup_cgranges.sh  tree.cpp  tree.h
bramble-cli/: Cargo.toml  README.md
bramble-cli/src/: alignment.rs  bam_input.rs  cli.rs  header.rs  main.rs  pipeline.rs
bramble-rs/: Cargo.toml  PLAN.md  README.md
bramble-rs/src/: alignment.rs  annotation.rs  api.rs  bam_input.rs  cigar.rs  cli.rs  evaluate.rs  fasta.rs  g2t.rs  groups.rs  header.rs  lib.rs  main.rs  pipeline.rs  sw.rs  types.rs
bramble-rs/tests/: evaluate.rs  integration.rs  short_read_projection.rs  update_cigar.rs
gclib/: GList.hh  GSam.cpp  GSam.h  GStr.cpp  GVec.hh  gff.cpp  gff.h
htslib/: config.h  config.mk  config.status  config_vars.h  htslib-uninstalled.pc  htslib.pc.tmp  htslib_static.mk
htslib/lzma/: Makefile  config.h  config.status  libtool
htslib/lzma/debug/: Makefile
htslib/lzma/lib/: Makefile
htslib/lzma/po/: Makefile  Makefile.in
htslib/lzma/po4a/: xz-man.pot
htslib/lzma/po4a/man/de/: xz.1  xzdec.1
htslib/lzma/po4a/man/fr/: xz.1  xzdec.1  xzmore.1
htslib/lzma/po4a/man/ko/: xz.1  xzdec.1
htslib/lzma/po4a/man/pt_BR/: xz.1  xzdec.1
htslib/lzma/po4a/man/ro/: xz.1  xzdec.1
htslib/lzma/po4a/man/uk/: xz.1  xzdec.1
htslib/lzma/src/: Makefile
htslib/lzma/src/liblzma/: Makefile  liblzma.la  liblzma_la-alone_decoder.lo  liblzma_la-alone_encoder.lo  liblzma_la-arm.lo  liblzma_la-arm64.lo  liblzma_la-armthumb.lo  liblzma_la-auto_decoder.lo  liblzma_la-block_buffer_decoder.lo  liblzma_la-block_buffer_encoder.lo  liblzma_la-block_decoder.lo  liblzma_la-block_encoder.lo  liblzma_la-block_header_decoder.lo  liblzma_la-block_header_encoder.lo  liblzma_la-block_util.lo  liblzma_la-check.lo  liblzma_la-common.lo  liblzma_la-crc32_fast.lo  liblzma_la-crc32_table.lo  liblzma_la-crc64_fast.lo  liblzma_la-crc64_table.lo  liblzma_la-delta_common.lo  liblzma_la-delta_decoder.lo  liblzma_la-delta_encoder.lo  liblzma_la-easy_buffer_encoder.lo  liblzma_la-easy_decoder_memusage.lo  liblzma_la-easy_encoder.lo  liblzma_la-easy_encoder_memusage.lo  liblzma_la-easy_preset.lo  liblzma_la-fastpos_table.lo  liblzma_la-file_info.lo  liblzma_la-filter_buffer_decoder.lo  liblzma_la-filter_buffer_encoder.lo  liblzma_la-filter_common.lo  liblzma_la-filter_decoder.lo  liblzma_la-filter_encoder.lo  liblzma_la-filter_flags_decoder.lo  liblzma_la-filter_flags_encoder.lo  liblzma_la-hardware_cputhreads.lo  liblzma_la-hardware_physmem.lo  (+42 more)
htslib/lzma/src/liblzma/.deps/: liblzma_la-alone_decoder.Plo  liblzma_la-alone_encoder.Plo  liblzma_la-arm.Plo  liblzma_la-arm64.Plo  liblzma_la-armthumb.Plo  liblzma_la-auto_decoder.Plo  liblzma_la-block_buffer_decoder.Plo  liblzma_la-block_buffer_encoder.Plo  liblzma_la-block_decoder.Plo  liblzma_la-block_encoder.Plo  liblzma_la-block_header_decoder.Plo  liblzma_la-block_header_encoder.Plo  liblzma_la-block_util.Plo  liblzma_la-check.Plo  liblzma_la-common.Plo  liblzma_la-crc32_fast.Plo  liblzma_la-crc32_table.Plo  liblzma_la-crc64_fast.Plo  liblzma_la-crc64_table.Plo  liblzma_la-delta_common.Plo  liblzma_la-delta_decoder.Plo  liblzma_la-delta_encoder.Plo  liblzma_la-easy_buffer_encoder.Plo  liblzma_la-easy_decoder_memusage.Plo  liblzma_la-easy_encoder.Plo  liblzma_la-easy_encoder_memusage.Plo  liblzma_la-easy_preset.Plo  liblzma_la-fastpos_table.Plo  liblzma_la-file_info.Plo  liblzma_la-filter_buffer_decoder.Plo  liblzma_la-filter_buffer_encoder.Plo  liblzma_la-filter_common.Plo  liblzma_la-filter_decoder.Plo  liblzma_la-filter_encoder.Plo  liblzma_la-filter_flags_decoder.Plo  liblzma_la-filter_flags_encoder.Plo  liblzma_la-hardware_cputhreads.Plo  liblzma_la-hardware_physmem.Plo  liblzma_la-ia64.Plo  liblzma_la-index.Plo  (+40 more)
htslib/lzma/src/liblzma/api/: Makefile
htslib/lzma/src/lzmainfo/: Makefile
htslib/lzma/src/scripts/: Makefile  xzdiff  xzgrep  xzless  xzmore
htslib/lzma/src/xz/: Makefile
htslib/lzma/src/xzdec/: Makefile
htslib/lzma/tests/: Makefile
htslib/xlibs/lib/: liblzma.la
htslib/xlibs/lib/pkgconfig/: liblzma.pc
include/: bam.h  bramble.h  bundles.h  evaluate.h  g2t.h  io.h  mates.h  reads.h  sw.h  threads.h  tree.h  types.h
ksw2/: ksw2.h  ksw2_extz2_sse.cpp
notes/: compare_long_read_outputs.py  long_read_11_mismatch_reads.md
notes/cleaning_git_history/: HOW_TO_ACCESS_CLEANUP.md  QUICK_CLEANUP_GUIDE.md  cleanup-git-history.sh
src/: bam.cpp  bramble.cpp  bundles.cpp  core.cpp  evaluate.cpp  g2t.cpp  iit.cpp  mates.cpp  reads.cpp  sw.cpp  threads.cpp  tree.cpp
subprojects/: cgranges.wrap  ksw2.wrap  libdeflate.wrap  quill.wrap  unordered_dense.wrap
subprojects/cgranges-b3d5e2c5b9a0a379f54592ab85f6cff5d58c387e/: .meson-subproject-wrap-hash.txt
subprojects/cgranges-b3d5e2c5b9a0a379f54592ab85f6cff5d58c387e/test/: bedcov-cr.py
subprojects/ksw2-289609bd9e5381a13b16239d0a7703f1ff03f9ca/: .meson-subproject-wrap-hash.txt
subprojects/packagefiles/cgranges/: meson.build
subprojects/packagefiles/htslib/: meson.build
subprojects/packagefiles/ksw2/: meson.build
subprojects/packagefiles/libdeflate/: meson.build
subprojects/packagefiles/unordered_dense/: meson.build
subprojects/unordered_dense-4.8.1/: .meson-subproject-wrap-hash.txt
test/: compare_sam_files.py
test/hisat2_out/: subset.gn.sorted.bam
test/subset/: region.bed  transcript_ids.txt
test_data/: ._subset.gn.sorted.bam  ._subset.gtf  subset.gtf
test_output/: projections_opt.bam  test_dense_1.bam  test_dense_2.bam  test_dense_3.bam  test_iter_1.bam  test_iter_2.bam  test_iter_3.bam  test_setint_1.bam  test_setint_2.bam  test_setint_3.bam  test_setint_manual.bam  test_std_1.bam  test_std_2.bam  test_std_3.bam
