[package]
name = "bramble-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Command-line tool to project spliced genomic alignments into transcriptomic space."
repository = "https://github.com/zrudnick/bramble"
homepage = "https://github.com/zrudnick/bramble"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "rna-seq", "transcriptomics", "splicing"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "bramble-rs"
path = "src/main.rs"

[dependencies]
bramble-rs = { path = "../bramble-rs", version = "0.1.0" }
anyhow = "1.0"
rust-htslib = { version = "1.0", default-features = false, features = ["bzip2"] }
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
indicatif = "0.18.3"
mimalloc = "0.1"
noodles = { version = "0.101", features = ["sam", "core"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
debug = true
