[package]
name = "bramble-rs"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Project spliced genomic alignments into transcriptomic coordinates."
repository = "https://github.com/zrudnick/bramble"
homepage = "https://github.com/zrudnick/bramble"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "rna-seq", "transcriptomics", "splicing"]
categories = ["science"]

[dependencies]
anyhow = "1.0"
ahash = "0.8"
coitrees = "0.4"
noodles = { version = "0.101", features = ["sam", "gff", "gtf", "core"] }
ksw2rs = "0.1.4"
needletail = { version = "0.6", default-features = false }

[profile.release]
debug = true
